<resources>
    <string name="app_name">Sheriff Dodge</string>
    <string name="arrow_left">arrow_left</string>
    <string name="arrow_right">arrow_right</string>
    <string name="restart_button_text">Restart?</string>
    <string name="game_title">Sheriff Dodge</string>
    <string name="back_to_titles">No, I want to go back to the title screen</string>
    <string name="settings_difficulty_text">Select your Difficulty:</string>
    <string name="settings_speed_text">Select the speed:</string>
    <string name="settings_save_text">Save Changes</string>
    <string name="send">Send</string>
    <string name="hint">Please Enter Location</string>
    <string name="start_btn_title">Start</string>
    <string name="settings_btn_title">Settings</string>
    <string name="scoreboard_btn_title">Scoreboard</string>
    <string name="exit_btn_title">Exit</string>
    <string name="empty">No Records were added yet!</string>

    <string-array name="settings_ARR_difficulty_levels">
        <item>Infinitely Easy</item>
        <item>Way Too Easy</item>
        <item>Too Easy</item>
        <item>Easy</item>
    </string-array>
</resources>