<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleScreenActivity"
    android:gravity="center"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/title_IMG_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/cowboy_logo"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_LBL_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_text_size"
            android:layout_below="@id/title_IMG_logo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/title_screen_margin"
            android:text="@string/game_title"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_btn_title"
            android:id="@+id/title_BTN_start"
            android:layout_below="@id/title_LBL_title"
            android:layout_centerInParent="true"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/title_screen_margin"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_move"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_title"
            android:id="@+id/title_BTN_settings"
            android:layout_below="@id/title_BTN_start"
            android:layout_centerInParent="true"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/title_screen_margin"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_move"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard_btn_title"
            android:id="@+id/title_BTN_scoreboard"
            android:layout_below="@id/title_BTN_settings"
            android:layout_centerInParent="true"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/title_screen_margin"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_move"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_btn_title"
            android:id="@+id/title_BTN_exit"
            android:layout_below="@id/title_BTN_scoreboard"
            android:layout_centerInParent="true"
            android:textSize="@dimen/default_text_size"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/title_screen_margin"
            android:textStyle="bold"
            android:backgroundTint="@color/btn_move"/>


    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>