<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_LBL_difficulty"
            android:text="@string/settings_difficulty_text"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/default_margin"/>

        <Spinner
            android:id="@+id/settings_SPN_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_toEndOf="@id/settings_LBL_difficulty"
            android:entries="@array/settings_ARR_difficulty_levels"
            android:minHeight="@dimen/min_height_spinner"
            android:textColor="@color/text_color" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_LBL_difficulty"
            android:id="@+id/settings_LBL_speed"
            android:text="@string/settings_speed_text"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/default_margin"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/settings_SLD_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_LBL_speed"
            android:layout_margin="@dimen/default_margin"
            app:trackColorInactive="@color/btn_move"
            app:trackColorActive="@color/text_color"
            app:thumbColor="@color/btn_move"
            app:tickColor="@color/background"
            android:contentDescription="@string/settings_speed_text"
            android:valueFrom="250"
            android:valueTo="1000"
            android:rotationY="180"
            android:stepSize="10"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_BTN_save"
            android:layout_below="@id/settings_SLD_speed"
            android:text="@string/settings_save_text"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/btn_move"
            android:textColor="@color/text_color"
            android:layout_margin="@dimen/default_margin"/>
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>